# cruithne3753-orbit-simulation

./: .gitignore  Makefile  README.md  pyproject.toml
report/: main.typ  sample.bib
scripts/: plot_clones.py  plot_fig3_horseshoe.py  plot_main_figures.py  plot_validation.py
src/cruithne/: __init__.py  analysis.py  cli.py  clones.py  constants.py  frames.py  horizons.py  io.py  kepler.py  plot_style.py  simulation.py
